# mlisp

./: .gitignore  LICENSE  README.md  collections.mlisp  dune-project  list.mlisp  makebin.sh  mlisp.opam  modules.mlisp  ppout.ml  show.mlisp  test.mlisp  tree.mlisp
lib/: MMap.ml  MMap.mli  ast.ml  builtins.ml  cases.ml  common_types.ml  dune  env.ml  env.mli  environment.ml  eval.ml  eval.mli  lexer.mll  mod.ml  mod.mli  parse.ml  parse.mli  parser.mly  potentially.ml  prelude.ml  show.ml  trait.ml  trait.mli  types.ml  types.mli  value.ml  value.mli
test/: dune
